# Public-API

./: .env  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  MIGRATION_GUIDE.md  PROOF_RUN_GUIDE.md  README.md  ogcex.proto  sidepit_client.py  spapi.proto
education/: README_CRYPTOGRAPHY.md  README_ECDSA.md  README_NNG.md  README_SECP256K1.md  README_SSL.md
education/cryptography/: .gitignore  README.md
examples/: quickstart.py
nng-client/: README.md  constants.py  echo_nng_client.py  echo_ws_server.py  feed_nng_client.py  feed_ws_server.py  main.py  my-bot.py  sidepit_nng_client.py  test_ws_client.py
old-proto/: ogcex.proto  spapi_pb2.py
python-client/: README.md  constants.py  echo_nng_client.py  feed_cli.py  feed_demo.py  feed_nng_client.py  feed_ws_server.py  my-bot.py  pyproject.toml  req_client.py  reqrep-server.py  requirements.txt  sidepit_nng_client.py  tx_server.py  utils.py
python-client/facade/: README.md  __init__.py  server.py
python-client/proto/: sidepit_api_pb2.py
python-client/run/: sidepit.py
python-client/sidepit_trader/: README.md  __init__.py  _proto.py  config.py  errors.py  feeds.py  flatten.py  keystore.py  mnemonic.py  reqrep.py  signer.py  stats.py  store.py  submit.py  swings.py  sync.py  trader.py  wallet.py  wire.py
python-client/sidepit_trader/examples/: hello_crossover.py  hello_market_data.py  hello_positions.py  hello_taker.py
python-client/tests/: test_courier_rule.py  test_order_handle.py
users-cli/: README.md  requirements.txt
ws-client/: sidepit_client.py  sidepit_feed_wss_client.py
(+47 files in other folders)
